# chatbot-service

./: .gitignore  LICENSE  README.md  docker-compose.yaml  env.example  main.py  pyproject.toml
backend/: pytest.ini  seed.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 09dc47aff2b6_message.py  12381ea92dcb_create_role_permisi_tables.py  16aaaa7ca3f0_init_table.py  171e07f62c91_create_user_role_permission_table.py  19109f340776_create_user_and_project_tables.py  284948577d72_message.py  3747c4af38e6_add_user_role_many_to_many.py  3acb576acec8_initial_db.py  4deafb42d723_add_user_role_many_to_many.py  5701bb4697b4_create_users_table.py  6c3e0c9d7862_initial_db.py  72a71e7c4243_create_user_tables.py  7efbb2e961f3_create_user_role_permission_table.py  9eba36f5ada5_add_owner_on_table_user.py  bfcd62e78292_create_user_role_permission_table.py  c8a15d3ba23e_add_owner_on_table_user.py  ce332c177902_add_user_role_many_to_many.py  d596bff10ffb_create_document_tables.py  de9e4a53a1f9_create_user_role_permisi_tables.py  e5b8e3a38576_add_owner_on_table_user.py  ec0a00827339_create_user_tables.py
backend/app/: crud.py  exception.py  generic.py  main.py  models.py  tests_pre_start.py  utils.py
backend/app/api/: deps.py  main.py
backend/app/core/: config.py  db.py  exception.py  security.py
backend/app/cruds/: crud.py  role_crud.py  user_crud.py
backend/app/models/: __init__.py  document.py  permission.py  project.py  role.py  role_permision.py  user.py  user_role.py
backend/app/repo/: email.py
backend/app/services/: email_service.py  role_service.py  user_service.py
backend/scripts/: tests-start.sh
backend/tests/: conftest.py  db_test.py
backend/tests/crud/: test_user.py
backend/tests/helpers/: user.py  util.py
(+21 files in other folders)
