[project]
name = "chatbot-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "email-validator>=2.3.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "tenacity>=9.1.4",
    "uvicorn>=0.47.0",
]
