[project]
name = "chatbot-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "colorlog>=6.10.1",
    "email-validator>=2.3.0",
    "emails>=1.1.2",
    "fastapi>=0.136.1",
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "huggingface-hub>=1.16.1",
    "jinja2>=3.1.6",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2,bcrypt]>=0.3.0",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "tenacity>=9.1.4",
    "uvicorn>=0.47.0",
]
